--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "country-state-city": "^3.2.1",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.4",
     "moment": "^2.30.1",
