--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "country-state-city": "^3.2.1",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.4",
+    "india-pincode-lookup": "^1.0.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
